--- a/index.html
+++ b/index.html
@@ -16,56 +16,56 @@
             <div class="seccion secc-cat">
                 <h3>Categorias</h3>
                 <ul class="categorias">
-                    <li class="sub-categorias"><a href="#">Placas de Video</a></li>
-                    <li class="sub-categorias"><a href="#">Procesadores</a></li>
-                    <li class="sub-categorias"><a href="#">Memorias</a></li>
-                    <li class="sub-categorias"><a href="#">Almacenamiento</a></li>
-                    <li class="sub-categorias"><a href="#">Refrigeración</a></li>
-                    <li class="sub-categorias"><a href="#">Todas las categorías</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Placas-de-Video/SCA_ID=-1/CAT_ID=48/SCAT_ID=-1/m=-1/maximus.aspx">Placas de Video</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Procesadores/SCA_ID=-1/CAT_ID=52/SCAT_ID=-1/m=-1/maximus.aspx">Procesadores</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Memorias-RAM/CAT_ID=50/SCAT_ID=3828/SCA_ID=-1/m=-1/maximus.aspx">Memorias</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Almacenamiento/SCA_ID=-1/CAT_ID=53/SCAT_ID=-1/m=-1/maximus.aspx">Almacenamiento</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Refrigeracion/SCA_ID=-1/CAT_ID=2/SCAT_ID=-1/m=-1/maximus.aspx">Refrigeración</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/SCA_ID=-1/SCAT_ID=-1/m=-1/maximus.aspx">Todas las categorías</a></li>
                 </ul>
             </div>
             <div class="seccion secc-marcas">
                 <h3>Marcas</h3>
                 <ul class="marcas">
-                    <li class="sub-categorias"><a href="#">Intel</a></li>
-                    <li class="sub-categorias"><a href="#">Western Digital</a></li>
-                    <li class="sub-categorias"><a href="#">AMD</a></li>
-                    <li class="sub-categorias"><a href="#">Asus</a></li>
-                    <li class="sub-categorias"><a href="#">Nvidia</a></li>
-                    <li class="sub-categorias"><a href="#">Redragon</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Intel/m=-1/OR=1/BUS=INTEL/maximus.aspx">Intel</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Western-Digital/m=15/OR=1/maximus.aspx">Western Digital</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/AMD/m=-1/OR=1/BUS=AMD/maximus.aspx">AMD</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Asus/m=12/OR=1/maximus.aspx">Asus</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Nvidia/m=-1/OR=1/BUS=NVIDIA/maximus.aspx">Nvidia</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Redragon/m=243/OR=1/maximus.aspx">Redragon</a></li>
                 </ul> 
             </div>
             <div class="seccion secc-buscado">            
                 <h3>Lo más buscado</h3>
                 <ul class="mas-buscado">
-                    <li class="sub-categorias"><a href="#">Placas de Video Nvidia</a></li>
-                    <li class="sub-categorias"><a href="#">Placas de Video AMD</a></li>
-                    <li class="sub-categorias"><a href="#">Gabinetes</a></li>
-                    <li class="sub-categorias"><a href="#">Monitores</a></li>
-                    <li class="sub-categorias"><a href="#">Teclado Mecánico</a></li>
-                    <li class="sub-categorias"><a href="#">Mouse Gamer</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Placas-de-Video-Nvidia/CAT_ID=48/SCAT_ID=3908/SCA_ID=-1/m=-1/maximus.aspx">Placas de Video Nvidia</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Placas-de-Video-AMD/CAT_ID=48/SCAT_ID=3826/SCA_ID=-1/m=-1/maximus.aspx">Placas de Video AMD</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Gabinetes/CAT_ID=1/SCAT_ID=-1/SCA_ID=-1/m=-1/OR=1/maximus.aspx">Gabinetes</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Monitores/CAT_ID=59/SCAT_ID=-1/SCA_ID=-1/m=-1/OR=1/maximus.aspx">Monitores</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Teclados-Mecanicos/CAT_ID=10/SCAT_ID=28/SCA_ID=-1/m=-1/wco=6/tv=MECANICO/maximus.aspx">Teclado Mecánico</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/ARTICULOS/Mouse-Gamer/SCA_ID=-1/CAT_ID=10/SCAT_ID=29/m=-1/wco=10/tv=GAMERS/maximus.aspx">Mouse Gamer</a></li>
                 </ul>   
             </div> 
             <div class="seccion secc-ayuda">
                 <h3>Ayuda</h3>
                 <ul class="ayuda">
-                    <li class="sub-categorias"><a href="#">Whatsapp</a></li>
-                    <li class="sub-categorias"><a href="#">FAQ</a></li>
-                    <li class="sub-categorias"><a href="#">Trámite Garantía</a></li>
+                    <li class="sub-categorias"><a href="https://api.whatsapp.com/send?phone=541123575522">Whatsapp</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/AYUDA1/centro-de-ayuda/maximus.aspx">FAQ</a></li>
+                    <li class="sub-categorias"><a href="https://www.maximus.com.ar/rma/garantia/maximus.aspx">Trámite Garantía</a></li>
                 </ul>                   
             </div>
             <div class="seccion secc-redes">                
                 <h3>Seguinos en las Redes</h3>
                 <ul class="redes">
-                    <li class="sub-categorias"><a href="#"><i class="fab fa-facebook"></i></a></li>
-                    <li class="sub-categorias"><a href="#"><i class="fab fa-instagram"></i></a></li>
-                    <li class="sub-categorias"><a href="#"><i class="fab fa-youtube"></i></a></li>
+                    <li class="sub-categorias"><a href="https://www.facebook.com/Maximus.Gaming.Argentina"><i class="fab fa-facebook"></i></a></li>
+                    <li class="sub-categorias"><a href="https://www.instagram.com/maximus_gaming_hardware/?hl=es"><i class="fab fa-instagram"></i></a></li>
+                    <li class="sub-categorias"><a href="https://www.youtube.com/c/MAXIMUSGAMINGTV"><i class="fab fa-youtube"></i></a></li>
                 </ul>  
             </div>
             <div class="seccion secc-sistemas">
                 <ul class="sistema">
-                    <a href="#" class="logo-gbp"><img src="./LogoGBPERP.svg" class="gbp" alt=""></a>
-                    <a href="" class="data-fiscal-a"><img src="./data-fiscal.png" class="data-fiscal" alt=""></a>                    
+                    <a href="https://www.globalbluepoint.com/" class="logo-gbp"><img src="./LogoGBPERP.svg" class="gbp" alt=""></a>
+                    <a href="https://serviciosweb.afip.gob.ar/clavefiscal/qr/publicInfoD.aspx" class="data-fiscal-a"><img src="./data-fiscal.png" class="data-fiscal" alt=""></a>                    
                 </ul>            
             </div>
         </div>
