added target blank for links outside of site

--- a/index.html
+++ b/index.html
@@ -57,15 +57,15 @@
             <div class="seccion secc-redes">                
                 <h3>Seguinos en las Redes</h3>
                 <ul class="redes">
-                    <li class="sub-categorias"><a href="https://www.facebook.com/Maximus.Gaming.Argentina"><i class="fab fa-facebook"></i></a></li>
-                    <li class="sub-categorias"><a href="https://www.instagram.com/maximus_gaming_hardware/?hl=es"><i class="fab fa-instagram"></i></a></li>
-                    <li class="sub-categorias"><a href="https://www.youtube.com/c/MAXIMUSGAMINGTV"><i class="fab fa-youtube"></i></a></li>
+                    <li class="sub-categorias"><a href="https://www.facebook.com/Maximus.Gaming.Argentina" target="_blank"><i class="fab fa-facebook"></i></a></li>
+                    <li class="sub-categorias"><a href="https://www.instagram.com/maximus_gaming_hardware/?hl=es" target="_blank"><i class="fab fa-instagram"></i></a></li>
+                    <li class="sub-categorias"><a href="https://www.youtube.com/c/MAXIMUSGAMINGTV" target="_blank"><i class="fab fa-youtube"></i></a></li>
                 </ul>  
             </div>
             <div class="seccion secc-sistemas">
                 <ul class="sistema">
-                    <a href="https://www.globalbluepoint.com/" class="logo-gbp"><img src="./LogoGBPERP.svg" class="gbp" alt=""></a>
-                    <a href="https://serviciosweb.afip.gob.ar/clavefiscal/qr/publicInfoD.aspx" class="data-fiscal-a"><img src="./data-fiscal.png" class="data-fiscal" alt=""></a>                    
+                    <a href="https://www.globalbluepoint.com/" class="logo-gbp" target="_blank"><img src="./LogoGBPERP.svg" class="gbp" alt=""></a>
+                    <a href="https://serviciosweb.afip.gob.ar/clavefiscal/qr/publicInfoD.aspx" class="data-fiscal-a" target="_blank"><img src="./data-fiscal.png" class="data-fiscal" alt=""></a>                    
                 </ul>            
             </div>
         </div>
@@ -75,3 +75,4 @@
 
 </body>
 </html>
+
